--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,5 +1,6 @@
 @use "fonts.css";
 @use "reset.css";
+@use "mixins";
 
 $black-color: #151515;
 
@@ -16,6 +17,82 @@ body {
   max-width: 1350px;
   padding: 0 10px;
   margin: 0 auto;
+}
+
+.header {
+  z-index: 5;
+  position: absolute;
+  width: 100%;
+  top: 47px;
+  padding: 0 10px;
+
+  &__inner {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 0 10px;
+
+    & > div {
+      display: flex;
+      align-items: center;
+    }
+  }
+
+  &__list {
+    display: flex;
+    align-items: center;
+  }
+
+  &__link {
+    @include mixins.flex-center;
+    width: 168px;
+    height: 60px;
+    font-size: 18px;
+    letter-spacing: -0.01em;
+    color: #fff;
+    border: 1px solid #fff;
+    border-radius: 60px;
+    transition: 0.3s;
+
+    &-active {
+      color: $black-color;
+      background-color: #fff;
+    }
+
+    &:hover {
+      color: $black-color;
+      background-color: #fff;
+      transition: 0.3s;
+    }
+  }
+
+  &__search {
+    @include mixins.flex-center;
+    width: 60px;
+    height: 60px;
+    border: 1px solid #fff;
+    border-radius: 60px;
+    transition: 0.3s;
+
+    &:hover {
+      transform: scale(1.1);
+      transition: 0.3s;
+    }
+  }
+}
+
+.logo {
+  @include mixins.flex-center;
+  width: 60px;
+  height: 60px;
+  border: 1px solid #fff;
+  border-radius: 60px;
+  backdrop-filter: blur(10px);
+}
+
+.nav__list {
+  display: flex;
+  align-items: center;
 }
 
 .intro {
@@ -68,12 +145,12 @@ body {
       font-size: 25px;
       letter-spacing: -0.01em;
       color: $black-color;
-      transition: .3s;
+      transition: 0.3s;
 
       &:hover {
         background-color: $black-color;
         color: #fff;
-        transition: .3s;
+        transition: 0.3s;
       }
     }
   }
