--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -13,6 +13,7 @@ body {
   color: $black-color;
   background-color: #fff;
   line-height: 1.1;
+  overflow-x: hidden;
 }
 
 .container {
@@ -28,11 +29,23 @@ body {
   top: 47px;
   padding: 0 10px;
 
+  &__mobile {
+    display: none;
+
+    @media screen and (max-width: 1024px) {
+      display: block;
+    }
+  }
+
   &__inner {
     display: flex;
     justify-content: space-between;
     align-items: center;
     gap: 0 10px;
+
+    @media screen and (max-width: 1024px) {
+      display: none;
+    }
 
     & > div {
       display: flex;
@@ -104,14 +117,42 @@ body {
   background-size: cover;
   width: calc(100% - 20px);
   min-height: calc(100vh - 20px);
-  height: 100%;
+  height: calc(100vh - 20px);
   margin: 10px auto;
   border-radius: 20px;
+  border-bottom-right-radius: 30px;
   position: relative;
-  overflow: hidden;
+  padding-bottom: 22px;
+
+  @media screen and (max-width: 880px) {
+    padding-bottom: 131px;
+  }
+
+  @media screen and (max-height: 880px) {
+    height: calc(100% - 20px);
+  }
 
   &__inner {
-    margin-top: 231px;
+    padding-top: 231px;
+    height: calc(100vh - 42px);
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    align-content: space-between;
+    flex-wrap: wrap;
+    gap: 50px;
+
+    @media screen and (max-width: 1024px) {
+      padding-top: 141px;
+    }
+
+    @media screen and (max-height: 880px) {
+      height: calc(100% - 20px);
+    }
+
+    @media screen and (max-width: 880px) {
+      height: calc(100% - 42px - 141px);
+    }
   }
 
   &__content {
@@ -120,6 +161,7 @@ body {
     width: fit-content;
     position: relative;
     margin: 0 auto;
+    user-select: none;
 
     h1 {
       font-family: $semibold-font;
@@ -129,6 +171,14 @@ body {
       position: absolute;
       left: 0;
       top: 0;
+
+      @media screen and (max-width: 1180px) {
+        left: 30px;
+        top: -15px;
+      }
+      @media screen and (max-width: 580px) {
+        font-size: 32px;
+      }
     }
 
     h2 {
@@ -139,6 +189,22 @@ body {
       color: #fff;
       display: flex;
       line-height: 1;
+
+      @media screen and (max-width: 1180px) {
+        font-size: 241px;
+      }
+
+      @media screen and (max-width: 880px) {
+        font-size: 191px;
+      }
+
+      @media screen and (max-width: 690px) {
+        font-size: 151px;
+      }
+
+      @media screen and (max-width: 580px) {
+        font-size: 131px;
+      }
 
       & > div {
         position: relative;
@@ -155,6 +221,15 @@ body {
           left: -35px;
           top: -20px;
           transition: 0.3s;
+
+          @media screen and (max-width: 1180px) {
+            width: 387px;
+            height: auto;
+          }
+
+          @media screen and (max-width: 880px) {
+            display: none;
+          }
         }
       }
     }
@@ -166,15 +241,36 @@ body {
     color: #fff;
     margin-top: -15px;
     margin-left: 100px;
+
+    @media screen and (max-width: 1180px) {
+      max-width: 520px;
+    }
+
+    @media screen and (max-width: 880px) {
+      max-width: 470px;
+    }
+
+    @media screen and (max-width: 580px) {
+      font-size: 16px;
+      max-width: 320px;
+      margin-top: -5px;
+    }
   }
 
   &__btn {
     position: absolute;
-    bottom: 0;
-    right: 0;
+    bottom: -1px;
+    right: -1px;
     background-color: #fff;
     padding: 10px 0 0 10px;
     border-top-left-radius: 32px;
+
+    @media screen and (max-width: 820px) {
+      left: -1px;
+      width: calc(100% + 2px);
+      border-radius: 0;
+      text-align: center;
+    }
 
     &::before,
     &::after {
@@ -184,17 +280,26 @@ body {
       width: 32px;
       border-bottom-right-radius: 30px;
       background: transparent;
-      box-shadow: 5px 5px 0 5px white;
     }
 
     &::before {
       bottom: 0px;
       left: -32px;
+      box-shadow: 6px 6px 0 5px white;
+
+      @media screen and (max-width: 820px) {
+        bottom: 109px;
+        left: 0;
+        box-shadow: -6px 6px 0 5px white;
+        border-bottom-right-radius: 0;
+        border-bottom-left-radius: 30px;
+      }
     }
 
     &::after {
       right: 0;
       bottom: 109px;
+      box-shadow: 6px 6px 0 5px white;
     }
 
     & > button {
@@ -208,6 +313,8 @@ body {
       letter-spacing: -0.01em;
       color: $black-color;
       transition: 0.3s;
+      position: relative;
+      z-index: 3;
 
       &:hover {
         background-color: $black-color;
@@ -218,8 +325,12 @@ body {
   }
 
   &__plants {
-    padding-top: 52px;
-    display: flex;
+    padding-left: 12px;
+    display: inline-flex;
+
+    @media screen and (max-width: 820px) {
+      bottom: 134px;
+    }
   }
 
   &__plants:hover &__descr {
@@ -292,6 +403,7 @@ body {
         height: 122px;
         transition: 0.3s;
         cursor: pointer;
+        animation: heightBounce 0.3s linear 1;
       }
 
       &:nth-child(1) {
@@ -309,6 +421,10 @@ body {
       }
     }
   }
+}
+
+.for {
+  height: 100vh;
 }
 
 @keyframes retreatLeftBounce {
@@ -352,5 +468,26 @@ body {
 
   100% {
     transform: translateX(0);
+  }
+}
+
+@keyframes heightBounce {
+  0% {
+    height: 72px;
+  }
+  20% {
+    height: 127px;
+  }
+  40% {
+    height: 117px;
+  }
+  60% {
+    height: 124px;
+  }
+  80% {
+    height: 120px;
+  }
+  100% {
+    height: 122px;
   }
 }
