--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -29,6 +29,10 @@ body {
   top: 47px;
   padding: 0 10px;
 
+  @media screen and (max-width: 460px) {
+    top: 27px;
+  }
+
   &__mobile {
     display: none;
 
@@ -150,8 +154,8 @@ body {
       height: calc(100% - 20px);
     }
 
-    @media screen and (max-width: 880px) {
-      height: calc(100% - 42px - 141px);
+    @media screen and (max-width: 460px) {
+      padding-top: 120px;
     }
   }
 
@@ -179,6 +183,18 @@ body {
       @media screen and (max-width: 580px) {
         font-size: 32px;
       }
+
+      @media screen and (max-width: 480px) {
+        left: 45px;
+      }
+
+      @media screen and (max-width: 460px) {
+        left: 0;
+      }
+
+      @media screen and (max-width: 375px) {
+        font-size: 24px;
+      }
     }
 
     h2 {
@@ -204,6 +220,14 @@ body {
 
       @media screen and (max-width: 580px) {
         font-size: 131px;
+      }
+
+      @media screen and (max-width: 480px) {
+        font-size: 101px;
+      }
+
+      @media screen and (max-width: 375px) {
+        font-size: 71px;
       }
 
       & > div {
@@ -237,6 +261,7 @@ body {
 
   &__text {
     max-width: 760px;
+    line-height: 1.3;
     letter-spacing: -0.01em;
     color: #fff;
     margin-top: -15px;
@@ -254,6 +279,10 @@ body {
       font-size: 16px;
       max-width: 320px;
       margin-top: -5px;
+    }
+
+    @media screen and (max-width: 375px) {
+      font-size: 14px;
     }
   }
 
@@ -294,12 +323,22 @@ body {
         border-bottom-right-radius: 0;
         border-bottom-left-radius: 30px;
       }
+
+      @media screen and (max-width: 460px) {
+        bottom: 96px;
+        left: 1px;
+      }
     }
 
     &::after {
       right: 0;
       bottom: 109px;
       box-shadow: 6px 6px 0 5px white;
+
+      @media screen and (max-width: 460px) {
+        bottom: 96px;
+        right: 1px;
+      }
     }
 
     & > button {
@@ -316,6 +355,12 @@ body {
       position: relative;
       z-index: 3;
 
+      @media screen and (max-width: 460px) {
+        width: 100%;
+        height: auto;
+        padding: 26px 0;
+      }
+
       &:hover {
         background-color: $black-color;
         color: #fff;
@@ -330,6 +375,10 @@ body {
 
     @media screen and (max-width: 820px) {
       bottom: 134px;
+    }
+
+    @media screen and (max-width: 375px) {
+      padding-left: 0;
     }
   }
 
@@ -354,6 +403,15 @@ body {
     letter-spacing: -0.01em;
     transition: 0.3s;
 
+    @media screen and (max-width: 480px) {
+      max-width: 202px;
+    }
+
+    @media screen and (max-width: 375px) {
+      padding: 15px;
+      max-width: 172px;
+    }
+
     &-hover {
       transform: translateX(20px);
       animation: retreatLeftBounce 0.3s linear 1;
@@ -366,14 +424,27 @@ body {
 
     & > h4 {
       font-size: 38px;
-
       padding-bottom: 20px;
+
+      @media screen and (max-width: 480px) {
+        font-size: 28px;
+        padding-bottom: 15px;
+      }
+
+      @media screen and (max-width: 375px) {
+        font-size: 24px;
+        padding-bottom: 12px;
+      }
     }
 
     & > p {
       font-size: 16px;
       max-width: 202px;
       line-height: 1.2;
+
+      @media screen and (max-width: 375px) {
+        font-size: 14px;
+      }
     }
   }
 
@@ -387,6 +458,11 @@ body {
     height: 192px;
     transition: 0.3s;
 
+    @media screen and (max-width: 375px) {
+      height: 182px;
+      width: 94px;
+    }
+
     & > img {
       position: absolute;
       display: block;
@@ -396,6 +472,11 @@ body {
       border-radius: 50px;
       left: 20px;
       transition: 0.3s;
+
+      @media screen and (max-width: 375px) {
+        width: 56px;
+        height: 56px;
+      }
 
       &:hover {
         z-index: 3;
