--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -37,7 +37,10 @@ body {
     display: none;
 
     @media screen and (max-width: 1024px) {
-      display: block;
+      display: flex;
+      gap: 0 20px;
+      align-items: center;
+      justify-content: space-between;
     }
   }
 
@@ -48,7 +51,30 @@ body {
     gap: 0 10px;
 
     @media screen and (max-width: 1024px) {
-      display: none;
+      position: absolute;
+      flex-direction: column;
+      background-color: $black-color;
+      padding: 20px;
+      gap: 20px;
+      z-index: 6;
+      border-radius: 8px;
+      right: 20px;
+      transform: translateY(-200%);
+      transition: .3s;
+
+      &-active {
+        transform: translateY(10px);
+        animation: bounceMenuShow 0.5s linear 1;
+      }
+
+      & > div {
+        flex-direction: column;
+        gap: 30px;
+      }
+
+      .logo {
+        display: none;
+      }
     }
 
     & > div {
@@ -60,6 +86,11 @@ body {
   &__list {
     display: flex;
     align-items: center;
+
+    @media screen and (max-width: 1024px) {
+      flex-direction: column;
+      gap: 30px;
+    }
   }
 
   &__link {
@@ -83,6 +114,18 @@ body {
       background-color: #fff;
       transition: 0.3s;
     }
+
+    @media screen and (max-width: 1024px) {
+      height: auto;
+      border: 0;
+
+      &-active,
+      &:hover {
+        color: #fff;
+        background-color: inherit;
+        text-decoration: underline;
+      }
+    }
   }
 
   &__search {
@@ -93,9 +136,57 @@ body {
     border-radius: 60px;
     transition: 0.3s;
 
+    @media screen and (max-width: 1024px) {
+      order: 1;
+      align-self: flex-start;
+    }
+
     &:hover {
       transform: scale(1.1);
       transition: 0.3s;
+    }
+  }
+
+  &__menu {
+    position: relative;
+    height: 28px;
+    width: 40px;
+
+    & > img {
+      position: absolute;
+      left: 0;
+      transition: all 0.3s;
+    }
+
+    & > img:nth-child(1) {
+      top: 0;
+    }
+
+    & > img:nth-child(2) {
+      top: 50%;
+      transform: translateY(-50%);
+    }
+
+    & > img:nth-child(3) {
+      bottom: 0;
+    }
+
+    &-active {
+      & > img:first-child {
+        top: 50%;
+        transform: translateY(-50%) rotate(-45deg);
+        transition: top 0.3s, transform 0.6s;
+      }
+
+      & > img:nth-child(2) {
+        opacity: 0;
+      }
+
+      & > img:last-child {
+        bottom: 50%;
+        transform: translateY(50%) rotate(45deg);
+        transition: bottom 0.3s, transform 0.6s;
+      }
     }
   }
 }
@@ -112,6 +203,11 @@ body {
 .nav__list {
   display: flex;
   align-items: center;
+
+  @media screen and (max-width: 1024px) {
+    flex-direction: column;
+    gap: 30px;
+  }
 }
 
 .intro {
@@ -232,7 +328,7 @@ body {
 
       & > div {
         position: relative;
-        z-index: 5;
+        z-index: 4;
 
         &:hover > img {
           transform: rotate(5deg);
@@ -570,5 +666,39 @@ body {
   }
   100% {
     height: 122px;
+  }
+}
+
+@keyframes bounceMenuShow {
+  0% {
+    transform: translateY(-200%);
+  }
+
+  18% {
+    transform: translateY(25px);
+  }
+
+  36% {
+    transform: translateY(0px);
+  }
+
+  50% {
+    transform: translateY(15px);
+  }
+
+  70% {
+    transform: translateY(5px);
+  }
+
+  80% {
+    transform: translateY(12px);
+  }
+
+  90% {
+    transform: translateY(8px);
+  }
+
+  100% {
+    transform: translateY(10px);
   }
 }
