--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -60,7 +60,7 @@ body {
       border-radius: 8px;
       right: 20px;
       transform: translateY(-200%);
-      transition: .3s;
+      transition: 0.3s;
 
       &-active {
         transform: translateY(10px);
@@ -601,7 +601,102 @@ body {
 }
 
 .for {
-  height: 100vh;
+  padding: 62px 0;
+
+  &__inner {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 0 20px;
+  }
+
+  &__content {
+    max-width: 292px;
+    letter-spacing: -0.01em;
+
+    & > h2 {
+      font-weight: 800;
+      font-size: 44px;
+      padding-bottom: 60px;
+      line-height: 1;
+    }
+
+    & > p {
+      font-size: 13px;
+    }
+  }
+
+  &__video {
+    min-width: 244px;
+    height: 142px;
+    border-radius: 20px;
+    overflow: hidden;
+    position: relative;
+
+    & > video {
+      object-fit: cover;
+      filter: grayscale(100%);
+    }
+  }
+
+  &__control {
+    position: absolute;
+    right: -2px;
+    top: 50%;
+    transform: translateY(-50%);
+    box-sizing: content-box;
+    width: 15px;
+    height: 16px;
+    padding: 28px;
+    background-color: $black-color;
+    border-radius: 50%;
+    border: 3px solid #fff;
+
+    & > img {
+      vertical-align: super;
+    }
+  }
+
+  &__descr {
+    max-width: 686px;
+    font-weight: 600;
+    font-size: 36px;
+    letter-spacing: -0.01em;
+  }
+
+  &__logo {
+    background-image: url("../assets/images/for/logo-back.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    border-radius: 60px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 178px;
+    height: 60px;
+    position: relative;
+    vertical-align: text-bottom;
+
+    &:hover img {
+      box-sizing: border-box;
+      height: 100%;
+      width: auto;
+      padding: 9px 66.9px;
+      transition: 0.3s;
+      object-fit: contain;
+    }
+
+    & > img {
+      position: absolute;
+      backdrop-filter: blur(10px);
+      box-sizing: content-box;
+      width: 40px;
+      padding: 11px 10px;
+      border-radius: 60px;
+      transition: 0.3s;
+    }
+  }
 }
 
 @keyframes retreatLeftBounce {
