add mobile media queries for section for

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -603,6 +603,14 @@ body {
 .for {
   padding: 62px 0;
 
+  @media screen and (max-width: 580px) {
+    padding: 47px 0;
+  }
+
+  @media screen and (max-width: 375px) {
+    padding: 32px 0;
+  }
+
   &__inner {
     display: flex;
     align-items: center;
@@ -613,6 +621,11 @@ body {
       justify-content: flex-start;
       flex-wrap: wrap;
       gap: 30px 20px;
+    }
+
+    @media screen and (max-width: 550px) {
+      justify-content: center;
+      gap: 20px;
     }
   }
 
@@ -625,11 +638,21 @@ body {
       max-width: 50%;
     }
 
+    @media screen and (max-width: 550px) {
+      max-width: 100%;
+      text-align: center;
+    }
+
     & > h2 {
       font-weight: 800;
       font-size: 44px;
       padding-bottom: 60px;
       line-height: 1;
+
+      @media screen and (max-width: 550px) {
+        font-size: 36px;
+        padding-bottom: 30px;
+      }
     }
 
     & > p {
@@ -677,6 +700,11 @@ body {
     @media screen and (max-width: 880px) {
       max-width: 100%;
     }
+
+    @media screen and (max-width: 550px) {
+      font-size: 28px;
+      text-align: center;
+    }
   }
 
   &__logo {
@@ -693,13 +721,26 @@ body {
     position: relative;
     vertical-align: text-bottom;
 
+    @media screen and (max-width: 550px) {
+      height: 50px;
+      width: 138px;
+    }
+
+    @media screen and (max-width: 375px) {
+      display: none;
+    }
+
     &:hover img {
       box-sizing: border-box;
       height: 100%;
       width: auto;
       padding: 9px 66.9px;
-      transition: 0.3s;
       object-fit: contain;
+      transition: all 0.3s;
+
+      @media screen and (max-width: 550px) {
+        padding: 7px 50px;
+      }
     }
 
     & > img {
@@ -709,7 +750,11 @@ body {
       width: 40px;
       padding: 11px 10px;
       border-radius: 60px;
-      transition: 0.3s;
+      transition: all 0.3s;
+
+      @media screen and (max-width: 550px) {
+        width: 26px;
+      }
     }
   }
 }
