--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -764,11 +764,27 @@ body {
     align-items: center;
     justify-content: space-between;
     margin-bottom: 80px;
+
+    @media screen and (max-width: 1200px) {
+      margin-bottom: 60px;
+      flex-direction: column;
+      gap: 20px;
+    }
+
+    @media screen and (max-width: 1024px) {
+      align-items: flex-start;
+    }
   }
 
   &__filters {
     display: inline-flex;
     align-items: center;
+
+    @media screen and (max-width: 1024px) {
+      max-width: 500px;
+      gap: 20px 10px;
+      flex-wrap: wrap;
+    }
   }
 
   &__btn {
@@ -792,6 +808,11 @@ body {
     &-active {
       display: flex;
       gap: 14px;
+
+      @media screen and (max-width: 769px) {
+        flex-direction: column;
+        gap: 24px;
+      }
     }
 
     &:first-child > div:nth-child(1) {
@@ -820,6 +841,12 @@ body {
     height: 411px;
     display: grid;
     align-content: space-between;
+    cursor: pointer;
+
+    @media screen and (max-width: 769px) {
+      width: 100%;
+      height: 240px;
+    }
 
     &:hover {
       filter: none;
@@ -829,6 +856,11 @@ body {
     &-active {
       width: 50%;
       filter: none;
+
+      @media screen and (max-width: 769px) {
+        width: 100%;
+        height: 340px;
+      }
     }
   }
 
@@ -850,7 +882,7 @@ body {
 
   &__card-active &__badge {
     border: 0.5px solid #b3b3b3;
-    transition: .3s;
+    transition: 0.3s;
   }
 
   &__title {
@@ -859,11 +891,19 @@ body {
     gap: 0 10px;
     justify-content: space-between;
 
+    @media screen and (max-width: 1024px) {
+      padding: 0;
+    }
+
     & > h3 {
       font-family: "Lufga Bold";
       font-size: 53px;
       letter-spacing: -0.01em;
       word-break: break-word;
+
+      @media screen and (max-width: 1250px) {
+        font-size: 43px;
+      }
     }
   }
 
@@ -889,9 +929,18 @@ body {
     padding: 0 20px;
     margin-top: 35px;
     letter-spacing: -0.01em;
+    width: 100%;
     visibility: hidden;
     transform: translateY(100px);
     transition: all 0.3s, visibility 0.1s;
+
+    @media screen and (max-width: 1024px) {
+      padding: 0;
+    }
+
+    @media screen and (max-width: 769px) {
+      max-width: 480px;
+    }
   }
 
   &__footer {
@@ -913,11 +962,11 @@ body {
     border: 0.5px solid #5a5a5a;
     border-radius: 29px;
     padding-right: 19px;
-    transition: .3s;
+    transition: 0.3s;
 
     &:hover {
       border: 0.5px solid #b3b3b3;
-      transition: .3s;
+      transition: 0.3s;
     }
 
     & > img {
