--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -246,7 +246,6 @@ body {
   border-bottom-right-radius: 30px;
   position: relative;
   padding-bottom: 22px;
-  overflow: hidden;
 
   &__inner {
     padding-top: 231px;
@@ -1470,6 +1469,98 @@ body {
 
     @media screen and (max-width: 320px) {
       font-size: 12px;
+    }
+  }
+}
+
+.quality {
+  &__title {
+    font-family: "Lufga ExtraBold", sans-serif;
+    font-size: 108px;
+    line-height: 118%;
+    letter-spacing: -0.05em;
+    text-align: center;
+  }
+
+  &__text {
+    font-family: $semibold-font;
+    font-size: 18px;
+    letter-spacing: 0.01em;
+    text-align: center;
+    max-width: 937px;
+    margin: 0 auto;
+    padding-top: 8px;
+  }
+
+  &__video {
+    position: relative;
+    width: 808px;
+    margin: 73px auto 0;
+    border-radius: 40px;
+    overflow: hidden;
+    transition: 0.5s;
+    margin-bottom: 182px;
+
+    video {
+      display: block;
+      object-fit: cover;
+      width: 100%;
+      opacity: 0;
+      transition: 0.5s;
+      transition: 0.3s;
+    }
+
+    &-active {
+      width: 100%;
+      margin-bottom: 0;
+      transition: 0.3s;
+
+      video {
+        opacity: 1;
+        transition: 0.3s;
+      }
+    }
+  }
+
+  &__poster {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: 0.3s;
+    z-index: 1;
+    opacity: 1;
+  }
+
+  &__video-active &__poster {
+    z-index: -1;
+    transition: 0.5s;
+  }
+
+  &__btn {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 172px;
+    height: 172px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    backdrop-filter: blur(15px);
+    background: rgba(0, 0, 0, 0.2);
+    border-radius: 100px;
+    border: 1px solid #ffffff;
+    transition: 0.3s;
+    z-index: 2;
+
+    &-active {
+      transform: translate(-200px, -150px);
+      opacity: 0;
+      visibility: 0;
+      transition: 0.3s;
     }
   }
 }
