add tablet media queries to section quality

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1477,9 +1477,19 @@ body {
   &__title {
     font-family: "Lufga ExtraBold", sans-serif;
     font-size: 108px;
-    line-height: 118%;
+    line-height: 1.18;
     letter-spacing: -0.05em;
     text-align: center;
+
+    @media screen and (max-width: 980px) {
+      font-size: 86px;
+      line-height: 1;
+      padding-bottom: 12px;
+    }
+
+    @media screen and (max-width: 768px) {
+      font-size: 68px;
+    }
   }
 
   &__text {
@@ -1490,16 +1500,24 @@ body {
     max-width: 937px;
     margin: 0 auto;
     padding-top: 8px;
+
+    @media screen and (max-width: 980px) {
+      max-width: 816px;
+    }
   }
 
   &__video {
     position: relative;
     width: 808px;
-    margin: 73px auto 0;
+    margin: 73px auto 182px;
     border-radius: 40px;
     overflow: hidden;
     transition: 0.5s;
-    margin-bottom: 182px;
+
+    @media screen and (max-width: 880px) {
+      width: 660px;
+      margin: 63px auto 132px;
+    }
 
     video {
       display: block;
@@ -1532,6 +1550,7 @@ body {
     transition: 0.3s;
     z-index: 1;
     opacity: 1;
+    cursor: pointer;
   }
 
   &__video-active &__poster {
