--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1636,6 +1636,14 @@ body {
 .faq {
   padding: 55px 0;
 
+  @media screen and (max-width: 768px) {
+    padding: 35px 0 45px;
+  }
+
+  @media screen and (max-width: 480px) {
+    padding: 25px 0 35px;
+  }
+
   &__list {
     display: grid;
     gap: 20px 0;
@@ -1644,6 +1652,14 @@ body {
       padding: 44px 40px;
       border: 2px solid $black-color;
       border-radius: 32px;
+
+      @media screen and (max-width: 980px) {
+        padding: 36px 32px;
+      }
+
+      @media screen and (max-width: 768px) {
+        padding: 28px 24px;
+      }
     }
   }
 
@@ -1652,12 +1668,19 @@ body {
     gap: 0 20px;
     align-items: center;
     justify-content: space-between;
-    padding-bottom: 10px;
 
     & > h4 {
       font-family: "Lufga ExtraBold", sans-serif;
       font-size: 46px;
       letter-spacing: -0.01em;
+
+      @media screen and (max-width: 980px) {
+        font-size: 38px;
+      }
+
+      @media screen and (max-width: 768px) {
+        font-size: 32px;
+      }
     }
   }
 
@@ -1695,6 +1718,15 @@ body {
       max-height: 500px;
       transform: translateY(0);
       transition: all 0.3s;
+      padding-top: 10px;
+
+      @media screen and (max-width: 980px) {
+        padding-top: 15px;
+      }
+
+      @media screen and (max-width: 768px) {
+        padding-top: 20px;
+      }
     }
   }
 }
